refactor: pass unit to new model
